--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <span>
+        Lorem ipsum
+    </span>
+
+    <span>
+        Lorem ipsum
+    </span>
+
+    <ul>
+        <li>element</li>
+        <li>element</li>
+        <li>element</li>
+        <li>element</li>
+    </ul>
+
+    <a href="https://afpa.fr">lien vers l'afpa</a>
+
+    <img src="" alt="texte de remplacement">
+
+    <form action="">
+        <div>
+            <label>
+                Nom:
+            </label>
+            <input type="text" name="nom" />
+        </div>
+        <div>
+            Prenom:
+            <input type="text" name="prenom" />
+        </div>
+        <div>
+            Ville:
+            <input type="text" name="prenom" />
+        </div>
+        <input type="checkbox" name="" id="">
+        <input type="reset" value="Annuler">
+        <input type="submit" value="Envoyer...">
+    </form>
 </body>
 </html>
